objects/sumoapp__BatchProcessItem__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__ClassName__c</fullName>
        <label>Batch Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EmailType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOKED</fullName>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>UPDATED</fullName>
                    <label>Updated</label>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>REMINDER</fullName>
                    <label>Reminder</label>
                </value>
                <value>
                    <fullName>BOOKED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>UPDATED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>CANCELED_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>REMINDER_SF_ONLY</fullName>
                </value>
                <value>
                    <fullName>WAITLIST</fullName>
                </value>
                <value>
                    <fullName>WAITLIST_SF_ONLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RecordIds__c</fullName>
        <label>Record Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SUMO Batch Process Item</label>
    <nameField>
        <displayFormat>BPI-{000000}</displayFormat>
        <label>Batch Process Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Batch Process Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>